--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -27,8 +27,15 @@ jobs:
       contents: read
     
     steps:
+      - uses: actions/checkout@v4
+
+      - uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
+
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
         with:
           project: nabil-portfolio
           entrypoint: https://deno.land/std/http/file_server.ts
+          root: .
